# navary

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
build-script/imgui/: CMakeLists.txt
cmake/: NvrDefs.cmake  NvrInspect.cmake
docs/: material-system.md  navari_arch.mmd
engine/: CMakeLists.txt  main.cc  version
engine/src/navari/: macro.h  sources.cmake
engine/src/navari/memory/: arena_allocator.cc  arena_allocator.h  block.h
engine/src/navari/utility/: sources.cmake
engine/src/navary/: log.h  macro.h  navary_status.h  result.h  resultcode.h  sources.cmake
engine/src/navary/core/: handles.h
engine/src/navary/core/time/: config.h  frame_pacer.cc  frame_pacer.h  monotonic_clock.cc  monotonic_clock.h  profiler_time.h  soft_resync.cc  soft_resync.h  tick_clock.cc  tick_clock.h  time_types.h  time_utils.h  timing_telemetry.cc  timing_telemetry.h
engine/src/navary/core/time/internal/: platform_clock_android.cc  platform_clock_apple.cc  platform_clock_fallback.cc  platform_clock_ifacade.h  platform_clock_linux.cc  platform_clock_win.cc
engine/src/navary/graph/shader/: graph_compiler.cc  graph_compiler.h  graph_ir.h  navgraph_binary.h  navgraph_loader.cc  navgraph_loader.h  node_metadata.cc  node_metadata.h
engine/src/navary/materials/v1/: material.h  material_desc.h  material_gpu.cc  material_gpu.h  material_registry.cc  material_registry.h  material_types.h  material_ubo.h
engine/src/navary/math/: aabb.cc  aabb.h  bounding_sphere.cc  bounding_sphere.h  conventions.h  fixed.h  fixed_mat4.h  fixed_quat.h  fixed_trigonometry.cc  fixed_trigonometry.h  fixed_vec2.cc  fixed_vec2.h  fixed_vec3.cc  fixed_vec3.h  frustum.cc  frustum.h  mat4.cc  mat4.h  math_util.h  obb.cc  obb.h  plane.cc  plane.h  quat.cc  quat.h  rect.cc  rect.h  size2.h  spline.cc  spline.h  spline_fixed.h  vec2.cc  vec2.h  vec3.cc  vec3.h  vec4.cc  vec4.h
engine/src/navary/memory/: arena.h  arena_allocator.cc  arena_allocator.h  block.h  span.h
engine/src/navary/render/v1/: descriptor_allocator.h  gpu_ring_buffer.cc  gpu_ring_buffer.h
engine/src/navary/render/v1/vulkan/: descriptor_allocator_vk.cc  descriptor_allocator_vk.h  descriptor_resources_vk.cc  descriptor_resources_vk.h
engine/src/navary/textures/v1/: texture_manager.cc  texture_manager.h  texture_notes.md  texture_streaming.cc  texture_streaming.h
engine/src/navary/utility/: random.h  sources.cmake
engine/tests/: CMakeLists.txt  result_int_test.cc  result_macro_test.cc  result_test.cc
engine/tests/math/: aabb_test.cc  bounding_sphere_test.cc  camera_proj_test.cc  camera_proj_vulkan_test.cc  fixed_mat4_test.cc  fixed_quat_test.cc  fixed_sim_test.cc  fixed_test.cc  fixed_trigonometry_test.cc  fixed_vec2_test.cc  fixed_vec3_rotate_test.cc  fixed_vec3_test.cc  frustum_test.cc  mat4_test.cc  math_util_test.cc  obb_test.cc  plane_test.cc  quat_test.cc  rect_test.cc  spline_rn_fixed_test.cc  spline_rn_test.cc  spline_sn_fixed_test.cc  spline_sn_test.cc  spline_tn_fixed_test.cc  spline_tn_test.cc  vec2_test.cc  vec3_test.cc  vec4_test.cc
engine/tests/memory/: arena_complex_test.cc  arena_test.cc
engine/tests/time/: frame_pacer_mode_test.cc  frame_pacer_test.cc  monotonic_clock_test.cc  profiler_time_test.cc  soft_resync_test.cc  tick_clock_test.cc  time_utils_test.cc
examples/arena-runner/: CMakeLists.txt  arena_all_tests_demo.cc
examples/vulkan-hello-world/: CMakeLists.txt
examples/vulkan-hello-world/src/: main.cc
